# dab_project

./: .coverage  .coveragerc  .gitignore  README.md  databricks.yml  pyproject.toml  requirements-dbc.txt  requirements-pyspark.txt  setup.py
.github/workflows/: cd-workflow.yml  ci-workflow.yml
citibike_etl/dlt/01_bronze/: 01_bronze_dlt_citibike.ipynb
citibike_etl/dlt/02_silver/: 02_silver_dlt_citibike.ipynb
citibike_etl/dlt/03_gold/: 03_gold_dlt_citibike_daily_ride_summary.ipynb  03_gold_dlt_citibike_daily_station_performance.ipynb
citibike_etl/notebooks/01_bronze/: 01_bronze_citibike.ipynb
citibike_etl/notebooks/02_silver/: 02_silver_citibike.ipynb
citibike_etl/notebooks/03_gold/: 03_gold_citibike_daily_ride_summary.ipynb  03_gold_citibike_daily_station_performance.ipynb
notebooks/: notebook_1.ipynb  notebook_2.ipynb
resources/: citibike_etl_pipeline.dlt.yml  citibike_etl_pipeline_nb.job.yml  citibike_etl_pipeline_py.job.yml  clusters.yml  demo_job.job.yml
scripts/: temp.py
tests/: test_citibike_utils.py  test_datetime_utils.py
